# nano-claude-py

./: .env.example  README.md  README_CN.md  pyproject.toml
src/nano_claude/: __init__.py  __main__.py  api.py  cli.py  compact.py  context.py  memory.py  permissions.py  prompt.py  session.py  types.py
src/nano_claude/tools/: __init__.py  agent.py  bash.py  edit.py  glob_tool.py  grep.py  read.py  write.py
